# triton-spark-server

./: .gitignore  CLAUDE.md  Dockerfile.rvc  Dockerfile.voice  INTEGRATION_STATUS.md  PROPOSED_STRUCTURE.md  README.md  TODO.txt  analyze.js  deps.js  docker-compose.rvc.yml  docker-compose.voice.yml  generate-structure.js  patterns.js  pyproject.toml  replace.js  requirements.txt  rvc_collab_script.txt  schema.js  setup.py  struct.txt  triton_collab_scritps.txt
.claude/: settings.local.json
colab/: triton_spark_rvc.ipynb  triton_spark_rvc_unified.ipynb
macros/: analyze-v2.js  analyze.js  api-docs.js  complexity.js  flow.js  generate-structure.js  grpc-audit.js  index.js  model-audit.js  refactor.js  replace.js  resource-audit.js  schema-export.js  worker-audit.js
quantum-logic/: README.md  derive-macros.js  index.js
quantum-logic/atoms/: calls.js  complexity.js  decorates.js  defines.js  exports.js  files.js  imports.js  (+6 more)
rvc/: __init__.py  download_model.py  rvc_config.py  rvc_init.py  rvc_modules.py  triton_client.py
rvc-ready/: README.md  rvc_config.py  rvc_init.py  rvc_modules.py
scripts/: install_rvc_in_container.sh  start_services.sh
tests/: __init__.py  test_connection.py  test_http_api.py  test_pipeline.py  test_rvc.py  test_tts.py
tools/: download_all_assets.py  init_rvc.py  run_rvc.py  run_tts.py  rvc_server_control.py  rvc_server_daemon.py  setup_environment.py  test_persistent_workers.py  test_pipeline.py  test_rvc_server.py  test_triton_connection.py  worker_control.py
triton/: README.md  TritonSparkTTS.py  docker-compose.yml  run.sh
(+61 files in other folders)
